# QBot

simple1/: .env.dev  .env.prod  README.md  bot.py  pyproject.toml
simple1/simple1/plugins/: Qbotdone.py  pushdailyweather.py  test1.py  weather.py
simple1/simple1/plugins/bilibili_task/: data_source.py
simple1/simple1/plugins/menu/: __init__.py  data_source.py
simple1/simple1/plugins/menu/functions/: functions.txt
simple1/simple1/plugins/menu/functions/help/: describe.txt
simple1/simple1/plugins/menu/functions/music/: describe.txt
simple1/simple1/plugins/menu/functions/天气/: describe.txt
simple1/simple1/plugins/menu/functions/定时天气预报/: describe.txt
simple1/simple1/plugins/menu/functions/彩蛋/: describe.txt
simple1/simple1/plugins/push_sys/: __init__.py  data_source.py  model.py
simple1/simple1/plugins/qbothelp/: __init__.py
simple1/simple1/plugins/wangyimusic/: __init__.py  data_source.py
